--- a/vue.html
+++ b/vue.html
@@ -6,21 +6,15 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>vue</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.3/css/bulma.min.css">
 </head>
 
 <body>
   <div id="root">
-    <button v-bind:title="title">Hover over me</button>
+
   </div>
   <script src="https://unpkg.com/vue@2.1.3/dist/vue.js"></script>
-  <script>
-    var obj = new Vue({
-      el: '#root',
-      data: {
-        title: 'it is a title'
-      }
-    })
-  </script>
+  <script src="../Study_demo/src/js/main.js"></script>
 </body>
 
 </html>
