--- a/vue.html
+++ b/vue.html
@@ -10,8 +10,19 @@
 </head>
 
 <body>
-  <div id="root">
+  <div id="root" class="container">
+    <article class="message">
+      <div class="message-header">
+        <p>Hello World</p>
+        <button class="delete" aria-label="delete"></button>
+      </div>
+      <div class="message-body">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis placerat
+        ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum <a>felis venenatis</a>        efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor
+        urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem.
+      </div>
 
+    </article>
   </div>
   <script src="https://unpkg.com/vue@2.1.3/dist/vue.js"></script>
   <script src="../Study_demo/src/js/main.js"></script>
