--- a/vue.html
+++ b/vue.html
@@ -15,10 +15,56 @@
 </head>
 
 <body>
-  <div id="root" class="container">
+  <!--demo 02 start-->
+  <!-- <div id="root" class="container">
     <message title="hello world" body="Lorem ipsum dolor sit amet."></message>
     <message title="ndsanondoansdnaon" body="bababababababababbaabab."></message>
+  </div> -->
+  <!--demo 02 end-->
+
+  <!--demo 03 start-->
+  <!-- <div id="root" class="container">
+    <modal v-if="showModal" @close="showModal = false">
+      <p>1313115619189189191</p>
+    </modal>
+    <button @click="showModal = true">show Modal</button>
+  </div> -->
+  <!--demo 03 end-->
+
+  <!--demo 04 start-->
+  <div id="root" class="container">
+    <tabs>
+      <tab name="About us" :selected="true">
+        <h1>Here is the content for the about 1 tab.</h1>
+      </tab>
+      <tab name="About cn">
+        <h1>Here is the content for the about 2 tab.</h1>
+      </tab>
+      <tab name="About">
+        <h1>Here is the content for the about 3 tab.</h1>
+      </tab>
+    </tabs>
   </div>
+  <!--demo 04 end-->
+
+  <!--demo 05 start-->
+  <!-- <div id="root">
+
+  </div> -->
+  <!--demo 05 end-->
+
+  <!--demo 06 start-->
+  <!--   <div id="root">
+
+  </div> -->
+  <!--demo 06 end-->
+
+  <!--demo 07 start-->
+  <!--   <div id="root">
+
+  </div> -->
+  <!--demo 07 end-->
+
   <script src="https://unpkg.com/vue@2.1.3/dist/vue.js"></script>
   <script src="../Study_demo/src/js/main.js"></script>
 </body>
