--- a/vue.html
+++ b/vue.html
@@ -32,7 +32,7 @@
   <!--demo 03 end-->
 
   <!--demo 04 start-->
-  <div id="root" class="container">
+  <!--   <div id="root" class="container">
     <tabs>
       <tab name="About us" :selected="true">
         <h1>Here is the content for the about 1 tab.</h1>
@@ -44,13 +44,14 @@
         <h1>Here is the content for the about 3 tab.</h1>
       </tab>
     </tabs>
-  </div>
+  </div> -->
   <!--demo 04 end-->
 
   <!--demo 05 start-->
-  <!-- <div id="root">
-
-  </div> -->
+  <div id="root" class="container">
+    <coupon @applied="onCouponApplied"></coupon>
+    <h1 v-if="couponApplied">You used a coupon!</h1>
+  </div>
   <!--demo 05 end-->
 
   <!--demo 06 start-->
