--- a/vue.html
+++ b/vue.html
@@ -48,16 +48,16 @@
   <!--demo 04 end-->
 
   <!--demo 05 start-->
-  <div id="root" class="container">
+  <!-- <div id="root" class="container">
     <coupon @applied="onCouponApplied"></coupon>
     <h1 v-if="couponApplied">You used a coupon!</h1>
-  </div>
+  </div> -->
   <!--demo 05 end-->
 
   <!--demo 06 start-->
-  <!--   <div id="root">
+  <div id="root" class="container">
 
-  </div> -->
+  </div>
   <!--demo 06 end-->
 
   <!--demo 07 start-->
