--- a/vue.html
+++ b/vue.html
@@ -55,16 +55,28 @@
   <!--demo 05 end-->
 
   <!--demo 06 start-->
-  <div id="root" class="container">
-
-  </div>
+  <!--  <div id="root" class="container">
+    <modal>
+      <template slot="header">标题</template>
+      <template slot="footer">
+        <button class="button is-success">Save changes</button>
+        <button class="button">Cancel</button>
+      </template>
+    </modal>
+  </div> -->
   <!--demo 06 end-->
 
   <!--demo 07 start-->
+  <div id="root">
+
+  </div>
+  <!--demo 07 end-->
+
+  <!--demo 08 start-->
   <!--   <div id="root">
 
   </div> -->
-  <!--demo 07 end-->
+  <!--demo 08 end-->
 
   <script src="https://unpkg.com/vue@2.1.3/dist/vue.js"></script>
   <script src="../Study_demo/src/js/main.js"></script>
