--- a/vue.html
+++ b/vue.html
@@ -67,16 +67,17 @@
   <!--demo 06 end-->
 
   <!--demo 07 start-->
-  <div id="root">
+  <div id="root" class="container">
+    <progress-view inline-template>
+      <div>
+        <h1>you progress through this course is {{completionRate}}%</h1>
 
+        <p><button @click="completionRate +=10">Updata Completion Rate</button></p>
+      </div>
+    </progress-view>
   </div>
   <!--demo 07 end-->
 
-  <!--demo 08 start-->
-  <!--   <div id="root">
-
-  </div> -->
-  <!--demo 08 end-->
 
   <script src="https://unpkg.com/vue@2.1.3/dist/vue.js"></script>
   <script src="../Study_demo/src/js/main.js"></script>
